add firebase support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">test1</string>
+    <string name="app_name">NUGU_can_Art</string>
     <string name="test2">main2!</string>
 </resources>
